# simple-vehicle-communication-project

./: BatteryTemperatureVehicleModule.cpp  CMakeLists.txt  DataLoggingVehicleModule.cpp  README.md  SimpleSensorMonitor.cpp
hal/: CAN_HAL.cpp  I2C_HAL.cpp  LIN_HAL.cpp  SPI_HAL.cpp
hardware_simulation/: CMakeLists.txt
hardware_simulation/include/: CAN.h  I2C.h  LIN.h  SPI.h
hardware_simulation/source/: CAN.cpp  LIN.cpp  SPI.cpp
hardware_simulation/src/: CAN.cpp  I2C.cpp
include/: CAN_HAL.h  I2C_HAL.h  LIN_HAL.h  SPI_HAL.h  config.h
src/: BatteryTemperatureVehicleModule.cpp  DataLoggingVehicleModule.cpp  SimpleSensorMonitor.cpp
test/: test_HAL_gtest.cpp
